frontend/src/App.css
:root{
    --clr-primary-700: #285141;
    --clr-primary-600: #85420E;
    
    --clr-neutral-200: #F7F3ED;
    --clr-neutral-900: black;
    
    --size-100: 1rem;
    --size-200: 2rem;
    --size-250: 2.5rem;
    --size-300: 3rem;
    --size-600: 6rem;  
    --size-900: 9rem;
}

/* https://piccalil.li/blog/a-modern-css-reset 
   This is for removing all the defaults      */

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

html,
body {
  height: 100%;
}

/* Set core body defaults */
body {
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture,
svg {
  max-width: 100%;
  display: block;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }
  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* Start of CSS Design */

/*  */

/* Header Styles */
.primary-header{
  padding-top: var(--size-200);
}

.container {
  --max-width: 1110px;
  --padding: 1rem;

  width: min(var(--max-width), 100% - (var(--padding) * 2));
  margin: auto;
}

.nav-wrapper{
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-list{
    display: flex;
    gap: clamp(var(--size-100), 5vw, var(--size-300))
}

.nav-list > * {
  text-decoration: none;
  color: black;
}

.header-logo{
  height: var(--size-300);
}

.nav-wrapper > a{
  flex-shrink: 0;
}

/* Footer Styles */

.footer-logo{
  height: var(--size-600);
}

